# amazon-bedrock-agent-workshop-for-gcr

./: .gitignore  CONTRIBUTORS.md  README.md  README_EN.md  RELEASE_NOTES.md  worksho_cfn_vscodeserver_with_AgentCode.yaml  workshop_cfn_vscodeserver_with_AgentCode.yaml  workshop_cleanup.sh
examples/agent_observability/: README.md
examples/agent_observability/OpenInference-Arize-Phoenix/: config.py
examples/agent_observability/OpenTelemetry-Agent-Instrumentation/: trace-bedrock-agents-with-langfuse.ipynb
examples/agent_observability/deploy-langfuse-on-ecs-fargate-with-typescript-cdk/: .gitignore  cfn_bootstrap.yml
examples/agents/: README.md
examples/agents/computer_use/: .gitignore  README.md  app.py  (+3 more)
examples/agents_ux/: README.md
examples/multi_agent_collaboration/: README.md
src/InlineAgent/: README.md  pyproject.toml
src/InlineAgent/examples/community/energy_efficiency_management_agent/: .env.example  main.py  prompt.py  tools.py
src/InlineAgent/examples/crewai_toolkit/pdf_rag_chroma_db/: README.md
src/InlineAgent/examples/feature_examples/multi_agent/supervisor/: main.py
src/InlineAgent/examples/mcp/cost_explorer_agent/: README.md
src/InlineAgent/examples/mcp/mcp_aws_kb/: README.md
src/InlineAgent/examples/mcp/mcp_sse/: README.md
src/InlineAgent/examples/observability/: README.md  main.py
src/InlineAgent/src/InlineAgent/agent/: process_roc.py
src/InlineAgent/src/InlineAgent/observability/: process.py
src/InlineAgent/src/InlineAgent/tools/: mcp.py
src/utils/: bedrock_agent.py  bedrock_agent_helper.py  knowledge_base_helper.py
(+94 files in other folders)
